# baresip-studio

./: .clang-format  .gitignore  .gitmodules  .svnignore  LICENSE  PrivacyPolicy.txt  README.md  build.gradle  build.gradle.kts  gradle.properties  reg.c-patch  settings.gradle.kts
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: accounts  adi-registration.properties  config  config.static  contacts
app/src/main/cpp/: CMakeLists.txt  android_camera2.c  android_camera2.h  baresip.c  common.c  common.h  logger.h  vidisp.c  vidisp.h
app/src/main/cpp/codec/: android_mediacodec.h  android_mediacodec_dec.c  android_mediacodec_enc.c  codec.c  codec.h  x264.h  x264_enc.c
app/src/main/cpp/codec/parse/: h264_parse.c  h265_parse.c
app/src/main/res/drawable/: add.xml  arrow_drop_down.xml  call.xml  call_down.xml  call_down_blue.xml  call_down_green.xml  call_down_red.xml  call_green.xml  call_hold.xml  call_missed_in.xml  call_missed_out.xml  call_tel.xml  call_transfer.xml  call_transfer_execute.xml  call_up.xml  call_up_green.xml  call_up_red.xml  call_video.xml  call_video_yellow.xml  call_yellow.xml  calls.xml  calls_missed.xml  camera_front.xml  camera_rear.xml  circle.xml  circle_green.xml  circle_green_blind.xml  circle_red.xml  circle_red_blind.xml  circle_white.xml  circle_yellow.xml  circle_yellow_blind.xml  contacts.xml  delete.xml  dialpad_off.xml  dialpad_on.xml  edit.xml  edit_aor.xml  hangup.xml  hangup_icon.xml  (+59 more)
app/src/main/res/drawable-night/: call_video.xml  hangup.xml  message_in_bg.xml  message_out_bg.xml  spinner_bg.xml
app/src/main/res/layout/: account_row.xml  account_spinner.xml  activity_about.xml  activity_account.xml  activity_accounts.xml  activity_android_contact.xml  activity_android_contacts.xml  activity_audio.xml  activity_call_details.xml  activity_calls.xml  activity_chat.xml  activity_chats.xml  activity_codecs.xml  activity_config.xml  activity_contact.xml  activity_contacts.xml  activity_edit_accounts.xml  activity_edit_config.xml  activity_edit_contacts.xml  activity_history.xml  activity_main.xml  activity_message.xml  activity_messages.xml  alert_title.xml  android_contact_row.xml  android_uri_row.xml  call_detail_row.xml  call_notification.xml  call_row.xml  call_transfer_dialog.xml  chat.xml  chat_row.xml  codec.xml  contact_row.xml  history_row.xml  message.xml  notification.xml  password_dialog.xml  status_notification.xml
app/src/main/res/menu/: accounts_menu.xml  call_icon.xml  calls_menu.xml  chats_menu.xml  check_icon.xml  contacts_menu.xml  edit_menu.xml  hangup_icon.xml  main_menu.xml  mic_icon.xml  rec_icon.xml  speaker_icon.xml  swap_contacts_icon.xml  video_icon.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  dimens.xml  dimensions.xml  strings.xml  styles.xml  values-v35.xml
app/src/main/res/values-bg/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-iw/: strings.xml
app/src/main/res/values-ja-rJP/: strings.xml
app/src/main/res/values-nb-rNO/: strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sl/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-ta/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: keep.xml
distribution/baresip/include/: baresip.h
distribution/re/cmake/: re-config.cmake
distribution/re/include/: re.h  re_async.h  re_atomic.h  re_av1.h  re_base64.h  re_bfcp.h  re_btrace.h  re_convert.h  re_crc32.h  re_dbg.h  re_dns.h  re_fmt.h  re_h264.h  re_h265.h  re_hash.h  re_hmac.h  re_http.h  re_httpauth.h  re_ice.h  re_list.h  re_main.h  re_mbuf.h  re_mem.h  re_net.h  re_odict.h  re_pcp.h  re_rtp.h  re_rtpext.h  re_sa.h  re_sdp.h  re_sha.h  re_shim.h  re_sip.h  re_sipreg.h  re_sipsess.h  re_stun.h  re_sys.h  re_tcp.h  re_telev.h  re_thread.h  (+28 more)
distribution/rem/include/: rem.h  rem_au.h  rem_aubuf.h  rem_auconv.h  rem_audio.h  rem_aufile.h  rem_aumix.h  rem_autone.h  rem_dsp.h  rem_dtmf.h  rem_fir.h  rem_g711.h  rem_vid.h  rem_video.h  rem_vidmix.h
fastlane/metadata/android/de-DE/: full_description.txt  short_description.txt
fastlane/metadata/android/de-DE/changelogs/: 10.1.0.txt  10.2.0.txt  10.3.0.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: #37.3.1.txt#  1.0.0.txt  1.1.0.txt  1.3.0.txt  10.0.0.txt  10.1.0.txt  10.2.0.txt  10.3.0.txt  10.4.0.txt  11.0.0.txt  11.1.0.txt  11.2.0.txt  11.3.0.txt  12.0.0.txt  12.1.0.txt  (+432 more)
fastlane/metadata/android/fi-FI/: full_description.txt  short_description.txt
fastlane/metadata/android/id/: full_description.txt  short_description.txt
fastlane/metadata/android/iw-IL/: full_description.txt  short_description.txt
fastlane/metadata/android/nb-NO/: title.txt
fastlane/metadata/android/nb_NO/: full_description.txt  short_description.txt
fastlane/metadata/android/ro/: full_description.txt  short_description.txt
fastlane/metadata/android/ru-RU/: full_description.txt  short_description.txt
fastlane/metadata/android/sv/: full_description.txt  short_description.txt
fastlane/metadata/android/ta-IN/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt  title.txt
fdroid/repo/com.tutpro.baresip/en-US/: full_description.txt
gen-libs/: build.gradle
gen-libs/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+1130 files in other folders)
